<resources>
    <string name="loud_large_button">Loud Large Button</string>
    <string name="loud_medium_button">Loud Medium Button</string>
    <string name="loud_small_button">Loud Small Button</string>
    <string name="loud_large_loading_button">Loading Loud Large Button</string>
    <string name="loud_medium_loading_button">Loading Loud Medium Button</string>
    <string name="loud_small_loading_button">Loading Loud Small Button</string>
    <string name="loud_large_button_programmatic">Loud Large Button Programmatic</string>
    <string name="loud_medium_button_programmatic">Loud Medium Button Programmatic</string>
    <string name="loud_with_drawable_button_programmatic_left">Loud With Drawable Left</string>
    <string name="loud_with_drawable_button_programmatic_right">Loud With Drawable Right</string>
    <string name="loud_small_button_programmatic">Loud Small Button Programmatic disabled</string>
    <string name="loud_large_button_disabled">Loud large button disabled</string>
    <string name="loud_large_button_text_updated">This text was updated programmatically</string>
    <string name="large_button_left_icon">Large button with left icon</string>
    <string name="large_button_right_icon">Large button with right icon</string>
    <string name="quiet_large_button">Quiet Large Button</string>
    <string name="quiet_medium_button">Quiet Medium Button</string>
    <string name="quiet_small_button">Quiet Small Button</string>
    <string name="quiet_large_loading_button">Loading Quiet Large Button</string>
    <string name="quiet_medium_loading_button">Loading Quiet Medium Button</string>
    <string name="quiet_small_loading_button">Loading Quiet Small Button</string>
    <string name="quiet_large_button_programmatic">Quiet Large Button Programmatic</string>
    <string name="quiet_medium_button_programmatic">Quiet Medium Button Programmatic</string>
    <string name="quiet_small_button_programmatic">Quiet Small Button Programmatic</string>
    <string name="quiet_large_button_hierarchy_updated">Hierarchy was updated programmatically</string>
    <string name="transparent_large_button">Transparent Large Button</string>
    <string name="transparent_medium_button">Transparent Medium Button</string>
    <string name="transparent_small_button">Transparent Small Button</string>
    <string name="transparent_large_loading_button">Loading Transparent Large Button</string>
    <string name="transparent_medium_loading_button">Loading Transparent Medium Button</string>
    <string name="transparent_small_loading_button">Loading Transparent Small Button</string>
    <string name="transparent_large_button_programmatic">Transparent Large Button Programmatic</string>
    <string name="transparent_medium_button_programmatic">Transparent Medium Button Programmatic</string>
    <string name="transparent_small_button_programmatic">Transparent Small Button Programmatic</string>
    <string name="quiet_large_button_disabled">Quiet Large Button Disabled</string>
    <string name="transparent_large_button_disabled">Transparent Large Button Disabled</string>
    <string name="andes_button_showcase">Andes Button</string>
    <string name="transparent_large_button_programmatic_int">Transparent Large Button Icon Int</string>
    <string name="andes_message_showcase">Andes Message</string>
    <string name="andes_message_title">Atention! 👇</string>
    <string name="andes_message_text">The purpose of a message is to highlight information on the screen.</string>
    <string name="body_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </string>
    <string name="title_text">Atention!</string>
    <string name="dismissable">Dismissable</string>
    <string name="should_animate">Should animate</string>
    <string name="andes_message_showcase_change">Update</string>
    <string name="change_text">Title text</string>
    <string name="change_body">Body text</string>
    <string name="change_primary">Primary action text</string>
    <string name="change_secondary">Secondary action text</string>
    <string name="change_link_button">Link action text</string>
    <string name="title_description">Atention! 👇</string>
    <string name="radiobutton_description">They allow you to make a selection from a list of options. Unlike checkboxes, radio buttons only allow you to choose an option.</string>
    <string name="thumbnail_description">They are containers that specify images, logos and icons for complementary content and modified meaning. When grouped together, they improve the scannability of the information.</string>
    <string name="textfield_description">Allows the user to enter and edit text values.</string>
    <string name="badge_description">Badges are small units of information that allow you to indicate the state of an element or differentiate several similar elements from each other.</string>
    <string name="tag_description">Tags are compact components that represent complex information in a summarized way. Allowing users to make selections, enter information, or filter content.</string>
    <string name="snackbar_description">They communicate quickly and concisely the status of an event. For more complex or extensive communications, consider the use of tooltip or message.</string>
    <string name="checkbox_description">They allow multiple selections from a list of options, unlike radio buttons that only allow you to choose a single option.</string>
    <string name="carousel_description">Groups and allows you to manipulate a horizontal sequence of content.</string>
    <string name="dropdown_form_description">This trigger is generally applied for form completion, that\'s why his style is aligned to the text field. They are usually used both for simple selections with few options and for more complex and extensive selections and options.</string>
    <string name="dropdown_standalone_description">They apply anywhere on the interface. By default they show a selected option and do not allow it to be empty. There are 3 sizes.</string>
    <string name="andesui_demoapp_screen_button">Andes UI: Button</string>
    <string name="andesui_demoapp_screen_bottom_sheet">Andes UI: Bottom Sheet</string>
    <string name="andesui_demoapp_screen_message">Andes UI: Message</string>
    <string name="andesui_demoapp_screen_textfield">Andes UI: Textfield</string>
    <string name="andesui_demoapp_screen_textfield_code">Andes UI: TextfieldCode</string>
    <string name="andesui_demoapp_screen_badge">Andes UI: Badge</string>
    <string name="andesui_demoapp_screen_tag">Andes UI: Tag</string>
    <string name="andesui_demoapp_screen_list">Andes UI: List</string>
    <string name="andesui_demoapp_screen_dropdown">Andes UI: Dropdown</string>
    <string name="andesui_demoapp_screen_checkbox">Andes UI: Checkbox</string>
    <string name="andesui_demoapp_screen_carousel">Andes UI: Carousel</string>
    <string name="andesui_demoapp_screen_card">Andes UI: Card</string>
    <string name="andesui_demoapp_screen_snackbar">Andes UI: Snackbar</string>
    <string name="andesui_demoapp_screen_coachmark">Andes UI: Coachmark</string>
    <string name="andesui_demoapp_screen_radiobutton">Andes UI: RadioButton</string>
    <string name="andesui_demoapp_screen_datepicker">Andes UI: DatePicker</string>
    <string name="andesui_demoapp_screen_thumbnail">Andes UI: Thumbnail</string>
    <string name="andesui_demoapp_screen_whatsnew">Andes UI: What\'s new?</string>
    <string name="andesui_demoapp_changelog_error">What\'s New couldn\'t be loaded, please contact our support team.</string>
    <string name="andesui_demoapp_label_showcase">Showcase</string>
    <string name="andesui_demoapp_label_whatsnew_title">Hey! Check the What\'s New!</string>
    <string name="andesui_demoapp_label_whatsnew_body">There you can see what are the things we\'ve been working on 😃</string>
    <string name="andesui_demoapp_label_corner">Corner</string>
    <string name="andesui_demoapp_label_rounded">Rounded</string>
    <string name="andesui_demoapp_label_standard">Standard</string>
    <string name="andesui_demoapp_label_more">More</string>
    <string name="andesui_demoapp_label_andes_specs">Andes Specs 📘</string>
    <string name="andesui_demoapp_label_andes_tag_specs">Andes Tag Specs 📘</string>
    <string name="andesui_demoapp_label_andes_badge_specs">Andes Badge Specs 📘</string>
    <string name="andesui_demoapp_label_andes_message_specs">Andes Message Specs 📘</string>
    <string name="andesui_demoapp_label_andes_button_specs">Andes Button Specs 📘</string>
    <string name="andesui_demoapp_label_andes_thumbnail_specs">Andes Thumbnail Specs 📘</string>
    <string name="andesui_demoapp_clear_button">Clear</string>
    <string name="andesui_demoapp_dropdown_form_title">AndesDropdownForm</string>
    <string name="andesui_demoapp_dropdown_standalone_title">AndesDropdownStandalone</string>
    <string name="andesui_demoapp_textfield">Andes Textfield</string>
    <string name="andesui_demoapp_textfield_state_text">State:</string>
    <string name="andesui_demoapp_textfield_style_text">Style:</string>
    <string name="andesui_demoapp_textfield_prefix_text">Left component:</string>
    <string name="andesui_demoapp_textfield_suffix_text">Right component:</string>
    <string name="andesui_demoapp_counter_text">Counter:</string>
    <string name="andesui_demoapp_mask_hint">Mascara: ##-###-######-#</string>
    <string name="andesui_demoapp_textfield_input_type">Input Type:</string>
    <string name="andes_carousel_showcase">Andes Carousel</string>
    <string name="andes_checkbox_showcase">Andes Checkbox</string>
    <string name="andes_card_showcase">Andes Card</string>
    <string name="andes_radiobutton_showcase">Andes RadioButton</string>
    <string name="andes_radiobuttongroup_showcase">Andes RadioButtonGroup</string>
    <string name="andes_tag_showcase">Andes Tag</string>
    <string name="andes_simple_tag_showcase">Simple tag</string>
    <string name="andes_choice_tag_showcase">Choice tag</string>
    <string name="andes_snackbar_showcase">Andes Snackbar</string>
    <string name="andes_badge_showcase">Andes Badge</string>
    <string name="andes_badges_pill">Pill</string>
    <string name="andes_badges_other">Other cases</string>
    <string name="andes_badges_dot">Dot</string>
    <string name="andes_badges_error">error</string>
    <string name="andes_badges_warning">warning</string>
    <string name="andes_badges_success">success</string>
    <string name="andes_badges_highlight">highlight</string>
    <string name="andes_badges_neutral">neutral</string>
    <string name="andes_loud_badges_text">Hierarchy: Loud</string>
    <string name="andes_quiet_badges_text">Hierarchy: Quiet</string>
    <string name="andes_badges_modifier">Modifier</string>
    <string name="andes_badges_hierarchy">Hierarchy</string>
    <string name="andes_badges_type">Type</string>
    <string name="andes_badges_size">Size</string>
    <string name="andes_badges_border">Border</string>
    <string name="andes_badges_text">Demo</string>
    <string name="andes_checkbox_text">Andes checkbox</string>
    <string name="andes_checkbox_type">Type</string>
    <string name="andes_checkbox_status">Status</string>
    <string name="andes_checkbox_align">Align</string>
    <string name="andes_checkbox_text_list_divider">Divider</string>
    <string name="andes_checkbox_text_list_selection">Selection</string>
    <string name="andes_dropdown_title">Titulo</string>
    <string name="andesui_demoapp_progress_xlarge">XLARGE</string>
    <string name="andesui_demoapp_progress_large">LARGE</string>
    <string name="andesui_demoapp_progress_medium">MEDIUM</string>
    <string name="andesui_demoapp_progress_small">SMALL</string>
    <string name="andesui_demoapp_loading_title">Click the button to show the spinner</string>
</resources>